--- a/map_wms_wfs_spatial_query.html
+++ b/map_wms_wfs_spatial_query.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v7.2.2/ol.css">
     <!-- <link rel="stylesheet" href="http://localhost:8080/webgis/libs/v6.5.0/examples/resources/layout.css" type="text/css"> -->
 	     <link rel="stylesheet" href="http://localhost:8080/geodiscuss/vendor/ol-layerswitcher/dist/ol-layerswitcher.css" />
-
+       <link rel="icon" href="img/logo.PNG">
 
 	  <!-- <script src="http://localhost:8080/webgis/libs/v6.5.0/build/ol.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/ol@v7.2.2/dist/ol.js"></script>
