did optimization to code

--- a/map_wms_wfs_query.html
+++ b/map_wms_wfs_query.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 		 <!-- <script type="text/javascript" src="http://localhost:8080/geodiscuss/vendor/bootstrap/js/bootstrap.min.js"></script> -->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-		
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="http://localhost:8080/geodiscuss/vendor/jquery-ui/jquery-ui.css">
   <script src="http://localhost:8080/geodiscuss/vendor/jquery-ui/external/jquery/jquery.js"></script>
   <script src="http://localhost:8080/geodiscuss/vendor/jquery-ui/jquery-ui.js"></script>
@@ -33,6 +33,11 @@
     font-family: arial;
   
 }
+.input_icon {
+  position: relative;
+    top: 30px;
+    left: 10px;
+}
   #title{
 	   position: absolute;
 	    top: 0%;
@@ -42,7 +47,6 @@
      color:white;
      padding-top: 5px;
 	   background-color: #337ab7;
-	   border: 1px solid white;   
 	  }
   #map{
 	   position: absolute;
@@ -353,7 +357,7 @@ button.btn-settings:active {
 		<option value="clear">Clear Measurement</option>
       </select>
     </form>
-	<form id="getinfo">
+	<form style="margin-left: 60px;" id="getinfo">
       <label>GetFeatureinfo&nbsp;</label>
       <select id="getinfotype">
 	  <option value="select">Select option</option>
@@ -1753,7 +1757,7 @@ map.un('click', highlight);
                                   <div class="mb-3">
                                       <label class="form-label">Your Email <span class="text-danger">*</span></label>
                                       <div class="form-icon position-relative">
-                                          <i data-feather="user" class="fea icon-sm icons"></i>
+                                          <i  class="fas fa-user input_icon"></i>
                                           <input type="email" class="form-control ps-5 @error('email') border-red-500 @enderror" placeholder="Email" autocomplete="off" name="email" required>
                                         
                                           <p class="text-danger  text-xs italic mt-4"></p>
@@ -1766,7 +1770,7 @@ map.un('click', highlight);
                                   <div class="mb-3">
                                       <label class="form-label">Password <span class="text-danger">*</span></label>
                                       <div class="form-icon position-relative">
-                                          <i data-feather="key" class="fea icon-sm icons"></i>
+                                          <i  class="fas fa-lock input_icon"></i>
                                           <input name="password" type="password" autocomplete="off" class="form-control ps-5 @error('password') border-red-500 @enderror" placeholder="Password" required="">
             
                                           <p class="text-danger text-xs italic mt-4"></p>
@@ -1815,14 +1819,14 @@ map.un('click', highlight);
 
   <div class="offcanvas-footer p-4 text-center">
       <ul class="list-unstyled social-icon social mb-0">
-          <li class="list-inline-item"><a href="http://www.facebook.com/RedGEMTech" class="rounded"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-          <li class="list-inline-item"><a href="https://www.instagram.com/redgem_tech/" target="_blank" class="rounded"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-          <li class="list-inline-item"><a href="https://twitter.com/RedGEM_Coin" class="rounded" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+          <li class="list-inline-item"><a href="http://www.facebook.com/RedGEMTech" class="rounded"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+          <li class="list-inline-item"><a href="https://www.instagram.com/redgem_tech/" target="_blank" class="rounded"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+          <li class="list-inline-item"><a href="https://twitter.com/RedGEM_Coin" class="rounded" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 
-<li class="list-inline-item"><a href="http://www.youtube.com/channel/UCE_knL3cgHyFtC5vlo6ebqA" target="_blank" class="rounded"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+<li class="list-inline-item"><a href="http://www.youtube.com/channel/UCE_knL3cgHyFtC5vlo6ebqA" target="_blank" class="rounded"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
 
 
-          <li class="list-inline-item"><a href="http://www.linkedin.com/company/the-redgem-technologies-inc" target="_blank" class="rounded"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+          <li class="list-inline-item"><a href="http://www.linkedin.com/company/the-redgem-technologies-inc" target="_blank" class="rounded"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
       </ul><!--end icon-->
   </div>
 </div>
